sorted car list by arrival time